--- a/client/views/register.html
+++ b/client/views/register.html
@@ -10,6 +10,7 @@
         <div id="register-text">
             <h1>Sign up for {{ title }}</h1>
             <h3>Auction description: {{ description }}</h3>
+            <img src="data:{{ img.contentType }};base64,{{ img.data }}">
             <p><b>The registration deadline is {{ deadline }}. After this date, you will no longer be able to register for this auction.</b></p>
             <hr>
             <p>Please register for this auction by entering an email and a password, which you will use to log in to the bidding page once the auction is live. If you successfully register, you will be redirected to a success confirmation page.</p>
