--- a/client/views/manage.html
+++ b/client/views/manage.html
@@ -37,6 +37,7 @@
         <p><strong>Auction end time / bid submission deadline:</strong> {{ end }}</p>
       </div>
     </div>
+    <img src="data:{{ img.contentType }};base64,{{ img.data }}">
     <p id="registration-deadline" hidden>{{ deadline_time }}</p>
     <p id="auction-start-time" hidden>{{ start_time }}</p>
     <p id="bid-submission-deadline" hidden>{{ end_time }}</p>
@@ -47,8 +48,8 @@
       <p id="update-button-output"></p>
       
       <br><hr><br>
-      <p>After all computation parties have connected to the server, click the button below to notify the bidders that the auction is live. Every individual who registered will receive an email with a link to the bid submission page.</p> 
-      <p id="compute-party-connection-status"><strong>Status:</strong> 0 computation parties are connected to the server</p><br>
+      <p>After all compute parties have connected to the server, click the button below to notify the bidders that the auction is live. Every individual who registered will receive an email with a link to the bid submission page.</p> 
+      <p id="compute-party-connection-status"><strong>Status:</strong> 0 compute parties are connected to the server</p><br>
       <button type="button" class="button" id="notify-registered-users" onclick="notifyRegisteredUsers();" disabled>Notify Auction Participants</button>
       <p id="notify-button-output"></p>
       
