make the application reusable

--- a/client/views/auction.html
+++ b/client/views/auction.html
@@ -19,6 +19,7 @@
   <br>
   <div id="page-info">
     <p hidden id="email">{{ email }}</p>
+    <p id="bid-submission-deadline" hidden>{{ end_time }}</p>
     <h1>{{ title }}</h1>
     <h2>{{ description }}</h2>
     <img src="data:{{ img.contentType }};base64,{{ img.data }}">
